# pomaidb-web

./: .gitmodules  README.md  fetch-init.js  index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  style.css  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/blog/: page.tsx
app/case-studies/: page.tsx
app/docs/: doc-content.tsx  docs-config.ts  layout.tsx  page.tsx
app/hire-me/: page.tsx
app/projects/: page.tsx  projects.ts
app/research/: page.tsx
app/videos/: page.tsx
components/: footer.tsx  navigation.tsx
data/: stations.ts
devlog/: index.html
docs/: SOT_WASM_PLAN.md  WASM.md
engineering/: index.html  styles.css
lib/: blog.ts  case-studies.ts  research.ts
pomaidb/: architecture.html  benchmark.html  developers.html  index.html  style.css
pomaiqueue/: developer_notes_and_issues.html  index.html  performance_benchmarks_report.html  queue_contract_and_semantics.html  reliability_and_crash_testing.html  system_architecture_and_internals.html
pomaisearch/: api.html  architecture.html  benchmarks.html  guides.html  index.html  style.css
research/: cbr-s.paper-style.css  cbr-s.paper-style.html  index.html  style.css  vector-database-survey.css  vector-database-survey.html  vector-search-2025-survey.css  vector-search-2025-survey.html
scripts/: build_wasm.sh  dev.sh  pomai_search_docs.config.json  sync_pomai_search_docs.mjs  test_all.sh  test_wasm_node.sh  wasm_node_test.mjs
wasm/: CMakeLists.txt
wasm/bindings/: pomaidb_bindings.cpp
(+189 files in other folders)
